# poker-battle

./: .gitignore  Dockerfile  README.md  pyproject.toml
api/: pyproject.toml
api/data/: allows.json  earnings.json
api/src/: allowlist.py  main.py
api/src/earnings/: __init__.py  store.py
api/src/game/: __init__.py  hand_rank_tests.py  manager.py  models.py
web/: .env.local  .gcloudignore  Dockerfile  next.config.ts  package-lock.json  package.json
web/public/: manifest.json
web/scripts/: start-standalone.js
web/src/: auth.ts  middleware.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/auth/ws-token/: route.ts
web/src/app/game/: page.tsx
web/src/app/game/[tableId]/: page.tsx
web/src/components/: login-button.tsx
web/src/components/game/: ActionControls.tsx  ActionHistory.tsx  BoardPot.tsx  CardBadge.tsx  EarningsModal.tsx  EarningsPanel.tsx  GameClient.tsx  JoinTableScreen.tsx  SeatCard.tsx
web/src/lib/game/: earnings.ts  handRank.ts  types.ts
web/src/types/: next-pwa.d.ts
